<resources>
    <string name="app_name">My Application</string>
    <string name="text_name">Hi there!</string>
    <string name="text_edit">Search company by name</string>
    <string name="text_amk">What UAS?</string>
    <string name="title">Guess Game</string>
    <string name="button_name">Start</string>
    <string name="image_name">Apple</string>
    <string name="image_lab">Lab</string>
    <string name="button_game">Play</string>
    <string name="button_exercise">Exercise</string>
    <string name="button_search">Search</string>
    <string name="button_toMap">Swipe to Map</string>
    <string name="startButton">Start</string>
    <string name="pauseButton">Pause</string>
    <string name="stopButton">Stop</string>
    <string name="star">ImgBtn</string>
    <string name="star1">ImgBtn1</string>
    <string name="star2">ImgBtn2</string>
    <string name="star3">ImgBtn3</string>
    <string name="bestScore"> </string>
    <string name="title_activity_main3">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_title">Your Location</string>
    <string name="text_dashboard">Dasboard fragment</string>
    <string name="label_latitude">Latitude (North-South Location)</string>
    <string name="label_longitude">Longitude (East-West Location)</string>
    <string name="timeCount" />
    <string-array name="numberpicker_main_picker" />
    <string name="label_address">Address</string>
    <string name="search_hint" translatable="false">search_hint</string>
    <string name="search_title" translatable="false">search_title</string>
    <string name="businessId">Business ID</string>
    <string name="item_companyForm">Company form</string>
    <string name="item_registrationDate">Company form</string>
    <string name="button_xamk">XAMK</string>
    <string name="button_laurea">LAUREA</string>
    <string name="button_lab">LAB</string>
    <string name="button_jamk">JAMK</string>
    <string name="button_tamk">tamk</string>
    <string name="text_score">Score</string>
    <string name="text_result" translatable="false">Result</string>
    <string name="button_score">Score</string>
   <!-- <string name="companyId">Business Id:</string>-->
</resources>