<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

   <!--<TextView
     android:id="@+id/clockView"
     android:layout_width="360dp"
     android:layout_height="26dp"
     android:format24hour="dd.MM.yyyy k:mm"
     android:text="TextView"
     tools:ignore="MissingConstraints"
     tools:layout_editor_absoluteX="25dp"
     tools:layout_editor_absoluteY="383dp" />-->

   <NumberPicker
       android:id="@+id/numberpicker_main_picker"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="24dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.15"></NumberPicker>

   <com.google.android.material.button.MaterialButtonToggleGroup
       android:id="@+id/toggleButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

   </com.google.android.material.button.MaterialButtonToggleGroup>

   <Button
       android:id="@+id/start"
       style="?attr/materialButtonOutlinedStyle"
       android:layout_width="88dp"
       android:layout_height="wrap_content"

       android:layout_marginStart="70dp"
       android:layout_marginBottom="232dp"
       android:text="@string/startButton"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/pause"
       app:layout_constraintStart_toStartOf="parent" />

   <Button
       android:id="@+id/stop"
       style="?attr/materialButtonOutlinedStyle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="232dp"
       android:text="@string/stopButton"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toEndOf="@+id/pause" />

   <Button
       android:id="@+id/pause"
       style="?attr/materialButtonOutlinedStyle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="232dp"
       android:text="@string/pauseButton"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/stop"
       app:layout_constraintStart_toEndOf="@+id/start" />

   <TextView
       android:id="@+id/timeCount"
       android:layout_width="78dp"
       android:layout_height="52dp"
       android:layout_marginTop="8dp"
       android:layout_marginBottom="16dp"
       android:text="@string/timeCount"
       app:layout_constraintBottom_toTopOf="@+id/start"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/numberpicker_main_picker" />


</androidx.constraintlayout.widget.ConstraintLayout>