<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Guess">

    <TextView
        android:id="@+id/win"
        android:layout_width="103dp"
        android:layout_height="28dp"
        android:text="@string/win"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.018"
        app:rowCount="2">

        <ImageButton
            android:id="@+id/star3"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/star3"
            android:scaleType="centerInside"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageButton
            android:id="@+id/star"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/star"
            android:scaleType="centerInside"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageButton
            android:id="@+id/star2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/star2"
            android:scaleType="centerInside"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageButton
            android:id="@+id/star1"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/star1"
            android:scaleType="centerInside"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@android:drawable/btn_star_big_on" />
    </androidx.gridlayout.widget.GridLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="308dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.767"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:focusable="true" />

    <TextView
        android:id="@+id/viewScore"
        android:layout_width="103dp"
        android:layout_height="28dp"
        android:text="@string/viewScore"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.529" />


</androidx.constraintlayout.widget.ConstraintLayout>


